--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,18 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --exec babel-node src/index.js"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.1"
   }
-} 
+}
