--- a/server/.env
+++ b/server/.env
@@ -1,15 +1,15 @@
 # Server
-PORT=3001
-JWT_SECRET=your_secret_key_here
+PORT=5000
+JWT_SECRET=your_jwt_secret_here
 
 # Database
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=film_social
-DB_PASSWORD=your_postgres_password
+DB_PASSWORD=root
 DB_PORT=5432
 
 # Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password
+REDIS_PASSWORD=root 
