--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,24 @@
 {
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon --exec babel-node src/index.js"
-  },
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "src/app.js",
+  "type": "module",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "jest"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1",
-    "pg": "^8.13.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
