--- a/server/package.json
+++ b/server/package.json
@@ -9,16 +9,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.9.0"
+    "helmet": "^8.0.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   }
 }
