--- a/server/.env
+++ b/server/.env
@@ -12,4 +12,7 @@ DB_PORT=5432
 # Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=root 
+REDIS_PASSWORD=root
+
+# TMDB API Key
+TMDB_API_KEY=7ebd42c606af4fc26a1a827b151eaf7b
